# sutom

./: .gitignore  README.md  lint.sh  main.py  pyproject.toml
data/: fr-nouns_filtered_normalized.txt
data/vocab/fr/: fr-nouns_filtered.txt  fr-nouns_raw.txt  fr-nouns_subset.txt
src/: __init__.py  human_player.py  info_theoretic_player.md  info_theoretic_player.py  info_theoretic_player_2.py  info_theoretical_player.py  main.py  normalize.py  play_sutom.py  play_sutom_ai.py  play_sutom_human.py  play_utils.py  player.py  sutom.py  sutom_engine.py
src/data_scripts/: explo.py  utils.py
